--- a/ClippyMAUI/Pages/FetchData.razor
+++ b/ClippyMAUI/Pages/FetchData.razor
@@ -7,7 +7,10 @@
 @inject HTTPClientService _httpService
 
 <h1>Magical Site</h1>
-    <LuckyCardComponent GetNewQuote="GetMessageAsync" MessageToDisplay="@_message"></LuckyCardComponent>    
+    <LuckyCardComponent
+		GetNewQuote="GetMessageAsync" 
+		MessageToDisplay="@_message">
+	</LuckyCardComponent>    
 
 
 
@@ -27,6 +30,7 @@
 		if(aPIResultModel.Success)
 		{
 			_message = aPIResultModel.Message;
+			FileService.WriteToFile("C:\\Users\\igalf\\Git\\mauisample.txt", _message);
 		}
 		else
 		{
